[package]
name = "args-functional"
version = "0.1.0"
authors = ["julian lazaras <lazaras@pdx.edu>"]
edition = "2018"
description = "functional argument parsing based on callbacks that supply lists of all args"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
